deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oyjoh
  namespace: apps
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: registry.digitalocean.com/olsen/oyjoh
          image: registry.digitalocean.com/olsen/oyjoh
          ports:
            - containerPort: 8080
