ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oyjoh-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "app.motoren.site"
      http:
        paths:
          - pathType: Prefix
            path: "/oyjoh"
            backend:
              service:
                name: oyjoh
                port:
                  number: 80
